--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
     </div>
 <script src="https://utteranc.es/client.js"
-        repo="Abcd136/x"
+        repo="Abcd136/x29"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
