--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="section">
         <div class="section-header">
             <div class="section-title">新变化</div>
-            <span></span>
+            <span><a href="https://abcd136.github.io/x30">注册登陆问题→</a></span>
         </div>
         <div>
 由于我们的网页包含成人内容，官网会经常被封，为避免大家无法访问，我们会随时发布最新地址，请通过以下渠道获取最新地址
